Adjust travis.yml to build mvn

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
 language: java
 dist: bionic
 sudo: false
-addons:
-  apt:
-    packages:
-      - ant
-      - ant-optional
 
 jdk:
   - openjdk11
@@ -13,5 +8,4 @@ jdk:
   - oraclejdk11
   - oraclejdk13
 
-script:
-  - "ant -buildfile build.xml clean check jar unittest"
+script: mvn clean package
