--- a/openrocket-core/pom.xml
+++ b/openrocket-core/pom.xml
@@ -34,6 +34,16 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <configuration>
+                    <reuseForks>false</reuseForks>
+                    <forkCount>1</forkCount>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -49,11 +59,6 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>26.0-jre</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>4.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.jamierf</groupId>
@@ -79,11 +84,6 @@
             <groupId>eu.infomas</groupId>
             <artifactId>annotation-detector</artifactId>
             <version>3.0.5</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>1</version>
         </dependency>
         <dependency>
             <groupId>javax.json</groupId>
