Fix some common dependencies between two modules

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>guice</artifactId>
             <version>4.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>eu.infomas</groupId>
+            <artifactId>annotation-detector</artifactId>
+            <version>3.0.5</version>
+        </dependency>
 
         <!-- Logging Dependencies -->
         <dependency>
